GNOME Bugzilla – Bug 789632
signal 'entry-deleted' is invalid for instance of type 'RhythmDBQueryModel'
Last modified: 2017-10-30 22:15:53 UTC
Selecting 'Properties' for an entry in the entry view, and change the property in the property view ( with the song info widget open ) should display this error.
Created attachment 362498 [details] [review] widgets: connect to query-model::post-entry-delete signal for rb_song_info_update_buttons() to work properly There is no "entry-deleted" signal for query-model. Either there is a "row-deleted" from GtkTreeModel (or) "entry-removed" from rhythmdb-query-model. Strictly speaking rhythmdb-query-model should emit "row-deleted" only after the row in the model is deleted. But, it is done prior to deletion, and a "post-entry-delete" signal is added for the post deletion case. So, we listen on that for rb_song_info_update_buttons() to work.
Review of attachment 362498 [details] [review]: pushed as commit 5f547681c