song-info: fix the signal name used for entry deletion

https://bugzilla.gnome.org/show_bug.cgi?id=789632